df-derive/tests/fail/151-fail-decimal-with-time-unit.stderr
error: field `amount` combines `decimal(...)` with `time_unit = "..."`; pick one — `decimal(...)` applies to decimal backend candidates, `time_unit` only applies to `chrono::DateTime<Tz>`, `chrono::NaiveDateTime`, `std::time::Duration`, `core::time::Duration`, or `chrono::Duration`
 --> tests/fail/151-fail-decimal-with-time-unit.rs:7:5
  |
7 | /     #[df_derive(decimal(precision = 10, scale = 2), time_unit = "ns")]
8 | |     amount: rust_decimal::Decimal,
  | |_________________________________^
